@@ -5,6 +5,8 @@ Release 5.0.6 (unreleased)
 Bug fixes
 ---------
 
+- Fix deadlock in interior faces renumbering with halo_adjacent_faces_last.
+
 - Fix line plot/cs_prope_set writer output for vector variables.
 
 - GUI: ensure runcase and current XML file are consistent before running.
